; ModuleID = '/home/carl/AnghaBench/mpv/input/extr_input.c_mp_input_queue_cmd.c'
source_filename = "/home/carl/AnghaBench/mpv/input/extr_input.c_mp_input_queue_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_ctx = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_input_queue_cmd(%struct.input_ctx* %0, i32* %1) #0 {
  %3 = alloca %struct.input_ctx*, align 8
  %4 = alloca i32*, align 8
  store %struct.input_ctx* %0, %struct.input_ctx** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.input_ctx*, %struct.input_ctx** %3, align 8
  %6 = call i32 @input_lock(%struct.input_ctx* %5)
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %16

9:                                                ; preds = %2
  %10 = load %struct.input_ctx*, %struct.input_ctx** %3, align 8
  %11 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %10, i32 0, i32 0
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @queue_add_tail(i32* %11, i32* %12)
  %14 = load %struct.input_ctx*, %struct.input_ctx** %3, align 8
  %15 = call i32 @mp_input_wakeup(%struct.input_ctx* %14)
  br label %16

16:                                               ; preds = %9, %2
  %17 = load %struct.input_ctx*, %struct.input_ctx** %3, align 8
  %18 = call i32 @input_unlock(%struct.input_ctx* %17)
  ret i32 1
}

declare dso_local i32 @input_lock(%struct.input_ctx*) #1

declare dso_local i32 @queue_add_tail(i32*, i32*) #1

declare dso_local i32 @mp_input_wakeup(%struct.input_ctx*) #1

declare dso_local i32 @input_unlock(%struct.input_ctx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
